# gtk-helo-again

./: meson.build
data/: helo-again.appdata.xml
